--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,124 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+@plugin "tailwind-scrollbar";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@media (max-width: 768px) {
+  .custom-pagination {
+    display: none !important;
   }
 }
 
+@theme {
+  /* breakpoint */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1824;
+  --breakpoint-xl: 1130px;
+  --breakpoint-2xl: 1520px;
+
+  /* colors */
+  --color-primary: #0d091a;
+  --color-secondary: #140e25;
+  --color-accent: #5810ff;
+  --color-accent-hover: #4a0bde;
+  --color-tertiary: #201837;
+  --color-tertiary-hover: #271f40;
+
+  /* fonts */
+  --font-primary: "Sometype Mono";
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply font-primary bg-primary text-white leading-relaxed;
+}
+
+.h1{
+  @apply text-[48px] md:text-[52px] xl:text-[56px] leading-[1] tracking-tight font-extrabold;
+}
+
+.h2{
+  @apply text-[32px] md:text-[36px] xl:text-[38px] leading-[1.15] tracking-tight font-medium;
+}
+
+.h3{
+  @apply text-[28px] md:text-[30px] xl:text-[32px] leading-[1.2] font-medium;
+}
+
+.h4{
+  @apply text-[22px] md:text-[26px] leading-snug font-medium;
+}
+
+.container {
+  @apply px-[15px];
+}
+
+.btn {
+  @apply flex items-center justify-center rounded-full cursor-pointer transition-all font-medium h-[56px];
+}
+
+.btn-sm {
+  @apply min-w-[168px] px-5 text-[15px] font-semibold;
+}
+
+.btn-lg {
+  @apply min-w-[200px] px-6;
+}
+
+/* btn color */
+
+.btn-accent{
+  @apply bg-accent hover:bg-accent-hover;
+}
+
+.btn-tertiary {
+  @apply bg-tertiary hover:bg-tertiary-hover;
+}
+
+.btn-white {
+  @apply bg-white hover:bg-white/90 text-primary;
+}
+
+/* swiper css */
+.swiper {
+  margin: 0 !important;
+}
+
+
+/* swiper bullets */
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullets {
+  @apply bg-accent w-3 h-3 transition-all duration-300;
+}
+
+/* ขยายขนาดจุด */
+.swiper-pagination-bullet {
+  transition: all 0.3s ease !important;
+  margin: 0 10px !important;
+}
+
+
+/* ------------- */
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #5810ff !important;
+  width: 50px !important;
+  height: 50px !important;
+}
+
+.swiper-horizontal>.swiper-button-next,
+.swiper-horizontal>.swiper-button-prev{
+  @apply w-5 h-5;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  @apply flex items-center justify-center p-3;
+}
+
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  @apply bg-black/50;
 }
